# amfoss-tasks

./: README.md  SOLUTION.md
Task-00/: Readme.md
Task-01/: README.md
Task-02/: PixelatedProblemSolver.py  README.md
Task-03/: README.md
Task-03/Beat The Buttons/: index.html  index.js  styles.css
Task-04/: Captain's Room 1.py  Decoding Digit Frequencies.py  Grid-Lock.py  Missing Nums.py  Power Combinations.py  README.md  Readme.md
Task-05/: .gitattributes  README.md
Task-05/PokeSearch/poke_env/: pyvenv.cfg
Task-05/PokeSearch/src/: search_window.py
Task-06/: README.md
Task-07/: README.md
Task-07/Weathr gaurdian/: index.html  manifest.json  script.js  styles.css
Task-08/: README.md
Task-08/ShaderProject/: CMakeLists.txt
Task-08/ShaderProject/src/: compute_shader.comp  compute_shader.spv  main.cpp
Task-09/: README.md
Task2/: PixelatedProblemSolver.py
